src/main/metadata/objects/Contract_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Asset_ID__c</fullName>
        <label>Asset ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composite_Contract_Asset_Identifier__c</fullName>
        <formula>FS_Contract__r.Borrower__r.BPID__c+"-"+ FS_Contract__r.Contract_ID__c+"-"+ Asset_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite Contract Asset Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipLabel>Contract Assets</relationshipLabel>
        <relationshipName>Contract_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Asset</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Contract Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>